log/build_2025-11-20_11-56-05/mypkg/stderr.log
  File "/home/ryota/ros2_ws/src/mypkg/install/mypkg/lib/python3.12/site-packages/mypkg/talker.py", line 1
    import rclpy      　  　　　　   #ROS 2のクライアントのためのライブラリ
                      ^
SyntaxError: invalid non-printable character U+3000

